Data Types In Python
There are 3 data types in Python
1. Int, Float, and Complex number 
An integer is basically a whole number, which can be positive or negative eg 12,-12, you can check by typing type(12+10)
type(12+11.5) float
type(5+6k) 
File "<ipython-input-4-57729aa1cf53>", line 1
    type(5+6k)
            ^
SyntaxError: invalid syntax

type(5+6j)
complex

#Boolean
type(True)
Result: bool

#Boolean
type(False)
Result: bool

#Boolean
type(true)
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-6-5ac29871a30e> in <module>()
      1 #Boolean
----> 2 type(true)

NameError: name 'true' is not defined

1>5
False
1==1
True

Sequence Data Type 

#Strings
'Single Quote'
Answer:'Single Quote'

#Strings
'Double Quote'
Answer:'Double Quote'

multiline="""
I
am
Aliza
I am who i am 
"""
print(multiline)
Answer: 
I
am
Aliza
I am who I am 

"I've always wanted to eat the gallon of ice cream."
Answer: "I've always wanted to eat the gallon of ice cream."

"""
I've always wanted to eat the gallon of "ice cream."
"""
type (multiline)
str

a = 'Hello World!'
print(a[:5])
Answer: Hello


a = 'Hello World!'
print(a[2:5])
Answer:llo

a*3
'Hello World!Hello World!Hello World!'



-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

#list
[1,2,3]
Answer:[1, 2, 3]

['Cokie Dough', 'Strawberry', 'Chocolate']
['Cokie Dough', 'Strawberry', 'Chocolate']

['Vanilla',['Scoops', 'Spoon'], True]
['Vanilla', ['Scoops', 'Spoon'], True]

ice_cream=['Cokie Dough', 'Strawberry', 'Chocolate']
ice_cream.append('Salted Caramel')
ice_cream

['Cokie Dough', 'Strawberry', 'Chocolate', 'Salted Caramel']
['Cokie Dough', 'Strawberry', 'Chocolate', 'Salted Caramel']

ice_cream[0]='Butter Pecan'
ice_cream

['Butter Pecan', 'Strawberry', 'Chocolate', 'Salted Caramel']

['Vanilla',3,['Scoops','Spoon'],True]
['Vanilla', 3, ['Scoops', 'Spoon'], True]

nest_list=['Vanilla', 3, ['Scoops', 'Spoon'], True]
nest_list[2][1]
'Spoon'

nest_list[0]
'Vanilla'


nest_list[2]
['Scoops', 'Spoon']


nest_list[2][1]
'Spoon'
--------------------------------------------------------------------------------------------------------------------------------------------------------------------
#tuple
tuple_scoops=(1,2,3,2,1)
type(tuple_scoops)
tuple

tuple_scoops[0]
1
-------------------------------------------------------------------------------------------------------------------------------------------------------------
#sets
daily_pints={1,2,3}
type(daily_pints)
set
print(daily_pints)
{1, 2, 3}

daily_pints_log={1,2,31,2,3,4,1,2,5,6,3,2}
print(daily_pints_log)

{1, 2, 3, 4, 5, 6, 31}


wifes_daily_pints_log={1,3,5,7,3,24,5,7,3,2,0}
print(daily_pints_log|wifes_daily_pints_log)
{0, 1, 2, 3, 4, 5, 6, 7, 24, 31}
print(daily_pints_log & wifes_daily_pints_log)
{1, 2, 3, 5}
print(daily_pints_log - wifes_daily_pints_log)
{4, 6, 31}
print( wifes_daily_pints_log- daily_pints_log )
{0, 24, 7}
print( wifes_daily_pints_log^ daily_pints_log )
{0, 4, 6, 7, 24, 31}


----------------------------------------------------------------------------------------------------------------------------------------
#dictionaries
#key/Value Pair
dict_cream={'name':'Aliza','weekly intake':5,'Favorite ice cream':['MCC','Chocolate']}
type(dict_cream)
dict
print(dict_cream)
{'name': 'Aliza', 'weekly intake': 5, 'Favorite ice cream': ['MCC', 'Chocolate']}
dict_cream.values()
dict_values(['Aliza', 5, ['MCC', 'Chocolate']])
dict_cream.keys()
dict_keys(['name', 'weekly intake', 'Favorite ice cream'])
dict_cream.items()
dict_items([('name', 'Aliza'), ('weekly intake', 5), ('Favorite ice cream', ['MCC', 'Chocolate'])])
dict_cream['name']
'Aliza'
dict_cream['name']='EvaJazmin'
print(dict_cream)

{'name': 'EvaJazmin', 'weekly intake': 5, 'Favorite ice cream': ['MCC', 'Chocolate']}

dict_cream.update({'name': 'EvaJazmin', 'weekly intake': 5, 'weight':30})
print(dict_cream)
{'name': 'EvaJazmin', 'weekly intake': 5, 'Favorite ice cream': ['MCC', 'Chocolate'], 'weight': 30}
del dict_cream['weight']
print(dict_cream)
{'name': 'EvaJazmin', 'weekly intake': 5, 'Favorite ice cream': ['MCC', 'Chocolate']}




